<resources>
    <string name="app_name">Registration</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
</resources>